@@ -27,19 +27,19 @@
 # IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-atf_test_case atf_run_warnings
-atf_run_warnings_head()
+atf_test_case runtime_warnings
+runtime_warnings_head()
 {
     # The fact that this test case is in this test program is an abuse.
     atf_set "descr" "Tests that the test case prints a warning because" \
-                    "it is not being run by atf-run"
+                    "it is being run outside of a runtime engine"
 }
-atf_run_warnings_body()
+runtime_warnings_body()
 {
     unset __RUNNING_INSIDE_ATF_RUN
     srcdir="$(atf_get_srcdir)"
     for h in $(get_helpers); do
-        atf_check -s eq:0 -o match:"passed" -e match:"WARNING.*atf-run" \
+        atf_check -s eq:0 -o match:"passed" -e match:"WARNING.*kyua" \
             "${h}" -s "${srcdir}" result_pass
     done
 }
@@ -129,7 +129,7 @@ result_exception_body()
 
 atf_init_test_cases()
 {
-    atf_add_test_case atf_run_warnings
+    atf_add_test_case runtime_warnings
     atf_add_test_case result_on_stdout
     atf_add_test_case result_to_file
     atf_add_test_case result_to_file_fail
